@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-08-18T08:13:41Z",
-  "count_outdated" : 166,
-  "uniques_outdated" : 140,
-  "count" : 171,
-  "uniques" : 145,
+  "timestamp" : "2023-08-20T08:12:09Z",
+  "count_outdated" : 167,
+  "uniques_outdated" : 141,
+  "count" : 172,
+  "uniques" : 146,
   "clones" : [
-    {
-      "timestamp": "2023-08-06T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-08-08T00:00:00Z",
       "count": 1,
@@ -43,6 +34,15 @@
     },
     {
       "timestamp": "2023-08-17T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-08-20T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
