@@ -3,11 +3,6 @@
   "uniques": 1,
   "clones": [
     {
-      "timestamp": "2023-08-06T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2023-08-08T00:00:00Z",
       "count": 1,
       "uniques": 1
@@ -24,6 +19,11 @@
     },
     {
       "timestamp": "2023-08-17T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-08-20T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
