@@ -1,3 +1,12 @@
+2023-08-20T08:12:09Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5916263170 # 1100
+* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-20
+* notice: last 14d: unq all: 1 5
+* notice: prev accum: outdated-unq outdated-all / unq all: 140 166 / 145 171
+* notice: next accum: outdated-unq outdated-all / unq all: 141 167 / 146 172
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2023-08-06] / [2023-08-20]
+
 2023-08-18T08:13:41Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5900374693 # 1094
 * notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-18
